<?xml version="1.0"?>
<package>
  <name>local_pose_talker</name>
  <version>0.0.0</version>
  <description>The local_pose_talker package</description>

  <maintainer email="hitrobot@todo.todo">hitrobot</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>tf</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>